hygia dashboard carousal issue next right position mobile resp fixed1

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -42,7 +42,7 @@ img {vertical-align: middle;}
   transition: 0.9s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
-  right: -12`px !important;
+  right: -54px !important;
 }
 /* Position the "next button" to the right */
 .next {
@@ -116,4 +116,5 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 600px) {
   .prev, .next,.text {font-size: 11px}
   .prev { left: -20px !important;}
+  .next {right: 0px !important;}
 }
